# auto-changelog

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: changelog_generator.rs  commit_classifier.rs  conventional_checker.rs  git_parser.rs  main.rs  release_notes.rs  types.rs  version_bumper.rs
