[package]
repository = "https://github.com/SuperInstance/auto-changelog"
name = "auto-changelog"
version = "0.1.0"
edition = "2021"
description = "Automatic changelog generator from conventional commits"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
semver = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
